--- a/masterproef.tex
+++ b/masterproef.tex
@@ -17,6 +17,7 @@
 \usepackage{amssymb}
 \usepackage[outputdir=_build]{minted}
 \usepackage{underscore}
+\usepackage{subcaption}
 
 % Missing unicode characters for Agda
 \usepackage{MnSymbol}
@@ -25,6 +26,8 @@
 \DeclareUnicodeCharacter{"25B8}{$\blacktriangleright$}
 \DeclareUnicodeCharacter{"1D9C}{$^{c}$}
 \DeclareUnicodeCharacter{"225F}{$\stackrel{?}{=}$}
+\DeclareUnicodeCharacter{"25A0}{$\blacksquare$}
+%\DeclareUnicodeCharacter{"25A0}{$$}
 
 % More readable minted commands
 \newmintinline[iagda]{agda}{}
