breaklines for code and explanation in ch-agda-haskell

--- a/ch-agda-haskell.tex
+++ b/ch-agda-haskell.tex
@@ -7,10 +7,13 @@
 In dit hoofdstuk beschrijven we de programmeertalen die gebruikt zijn in de
 gevalstudies. Er moet ergens een grens getrokken worden die bepaald wat wel en
 niet uitgelegd wordt, deze thesis veronderstelt dat de lezer vertrouwd is met
-getypeerd functioneel programmeren.
-Omdat Agda minder bekend is, is de uitleg hierover uitgebreider dan die over
-Haskell. Het enige dat we voor Haskell moeten uitleggen zijn namelijk de
-extensies van GHC \ref{ghc} die we gebruiken.
+getypeerd functioneel programmeren. Omdat Agda minder bekend is, is de uitleg
+hierover uitgebreider dan die over Haskell. Het enige dat we voor Haskell
+moeten uitleggen zijn namelijk de extensies van GHC \ref{ghc} die we gebruiken.
+Merk op dat overal waar code getoond wordt, het symbool
+{\tiny\ensuremath{\hookrightarrow}} gebruikt wordt om aan te duiden dat een
+regel die te lang was op die regel verder gaat, dit resulteert niet altijd in
+geldige code dus bij het overnemen moet hierop gelet worden.
 
 
 \section{Agda}
